<resources>
    <string name="app_name">undefined</string>
    <string name="input_email_address">이메일을 입력해주세요</string>
    <string name="input_password">비밀번호를 입력해주세요</string>
    <string name="login">로그인</string>
    <string name="need_account">계정이 필요한가요?</string>
    <string name="sign_up">가입하기</string>
    <string name="sign_out">로그아웃</string>
    <string name="create_account">회원 가입</string>
    <string name="input_account_info">회원 가입 정보를 입력해주세요</string>
    <string name="name">이름</string>
    <string name="input_name">이름을 입력해주세요</string>
    <string name="email_address">이메일 주소</string>
    <string name="password">비밀번호</string>
    <string name="birthday">생년월일</string>
    <string name="input_birthday">생년월일을 입력해주세요</string>
    <string name="lobby">대기실</string>
    <string name="online">온라인</string>
    <string name="concurrent_connectors">동시 접속자</string>
    <string name="searching_room">방찾기</string>
    <string name="creating_room">방만들기</string>
    <string name="user_profile_image">사용자 프로필 이미지</string>
    <string name="privated">비공개</string>
    <string name="participant">참여자</string>
    <string name="function">기능</string>
    <string name="input_message">메시지를 입력해주세요</string>
    <string name="success_create_account">성공적으로 계정이 생성되었습니다</string>
    <string name="email_already_exists">이미 존재하는 이메일입니다.</string>
    <string name="enter_all_info">모든 정보를 입력해주세요</string>
    <string name="auth_mail_has_been_sent">인증 메일이 전송되었습니다</string>
    <string name="error_saving_user_data">[데이터베이스 오류] 서버에 계정 정보를 전달하지 못했습니다</string>
    <string name="nickname">닉네임</string>
    <string name="status_message">상태메시지</string>
    <string name="my_page">마이페이지</string>
    <string name="try_create_alias_wizard">별명 생성 마법사를 사용해보세요!</string>
    <string name="introduce_your_self">개성있게 자신을 표현해보세요!</string>
    <string name="save">저장하기</string>
</resources>