<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.MyPageActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/my_page"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/iv_banner_img"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:background="@drawable/bn_gitjump"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_brush_24"
        tools:layout_editor_absoluteX="362dp"
        tools:layout_editor_absoluteY="161dp" />

    <ImageView
        android:id="@+id/iv_profile_img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_banner_img"
        app:layout_constraintEnd_toEndOf="@+id/iv_banner_img"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toStartOf="@+id/iv_banner_img"
        app:layout_constraintTop_toBottomOf="@+id/iv_banner_img"
        app:layout_constraintVertical_bias="0.49"
        app:srcCompat="@drawable/ic_user" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_brush_24"
        tools:layout_editor_absoluteX="107dp"
        tools:layout_editor_absoluteY="218dp" />

    <TextView
        android:id="@+id/tv_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/nickname"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_nickname"
        app:layout_constraintStart_toStartOf="@+id/et_nickname" />

    <EditText
        android:id="@+id/et_nickname"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="56dp"
        android:paddingHorizontal="14dp"
        android:background="@drawable/bg_rounded_edittext"
        android:ems="10"
        android:inputType="text"
        android:maxLength="9"
        android:textSize="15sp"
        android:hint="@string/try_rolling_the_dice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_profile_img" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="39dp"
        android:layout_height="40dp"
        app:srcCompat="@android:drawable/ic_menu_report_image"
        tools:layout_editor_absoluteX="316dp"
        tools:layout_editor_absoluteY="316dp" />

    <TextView
        android:id="@+id/tv_status_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/status_message"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_status_msg"
        app:layout_constraintStart_toStartOf="@+id/et_status_msg" />

    <EditText
        android:id="@+id/et_status_msg"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="50dp"
        android:paddingHorizontal="14dp"
        android:background="@drawable/bg_rounded_edittext"
        android:ems="10"
        android:inputType="text"
        android:maxLength="100"
        android:textSize="15sp"
        android:hint="@string/introduce_your_self"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_nickname" />

    <Button
        android:id="@+id/btn_sign_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:background="@drawable/bg_x_button"
        android:text="@string/sign_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_status_msg" />

</androidx.constraintlayout.widget.ConstraintLayout>